examples/bad/03-02-variable-has-name-of-function.lagger
int f(){
    return 0;
}

int main(){
    int f = 1;
    return 0;
}